test/library/packages/Python/correctness/arrays/arrayErrors.9.good
$CHPL_HOME/modules/packages/Python.chpl:nnnn: In method 'array':
$CHPL_HOME/modules/packages/Python.chpl:nnnn: error: Element type must be specified at compile time
  arrayErrors.chpl:142: called as (PyArray(nothing,-1)).array()
